# freedium

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  pyproject.toml  requirements.txt
.github/.workflows/: deployment.yml
.github/workflows/: deployment.yml
app/: config.py  main.py
app/routers/: api.py  web.py
app/services/: medium_service.py  redis_service.py  url_service.py
static/css/: style.css
static/js/: main.js
templates/: about.html  article.html  base.html  index.html  medium.html  result.html
tests/: test_url_service.py
